fix for https://zh.wikipedia.org/zh-hans/%E6%AE%96%E7%94%A2%E8%88%88%E6%A5%AD

--- a/src/main/resources/assets/urushi/lang/zh_cn.json
+++ b/src/main/resources/assets/urushi/lang/zh_cn.json
@@ -2868,7 +2868,7 @@
   "advancements.urushi.visualization_goggles.description": "获得灵力观测镜",
   "advancements.urushi.silkworm.title": "抽丝剥茧",
   "advancements.urushi.silkworm.description": "获得一些蚕",
-  "advancements.urushi.silk_thread.title": "产业振兴",
+  "advancements.urushi.silk_thread.title": "殖产兴业",
   "advancements.urushi.silk_thread.description": "获得绢丝"
 
 
