--- a/src/main/resources/assets/urushi/lang/zh_tw.json
+++ b/src/main/resources/assets/urushi/lang/zh_tw.json
@@ -2869,7 +2869,7 @@
   "advancements.urushi.visualization_goggles.description": "獲得靈力觀測鏡",
   "advancements.urushi.silkworm.title": "抽絲剝繭",
   "advancements.urushi.silkworm.description": "獲得一些蠶",
-  "advancements.urushi.silk_thread.title": "產業振興",
+  "advancements.urushi.silk_thread.title": "殖產興業",
   "advancements.urushi.silk_thread.description": "獲得絹絲"
 
 }
