zh_tw_6.5.3.json

--- a/src/main/resources/assets/urushi/lang/zh_tw.json
+++ b/src/main/resources/assets/urushi/lang/zh_tw.json
@@ -681,7 +681,7 @@
 
   "block.urushi.doubled_wooden_cabinetry": "大型抽屜櫃",
 
-  "block.urushi.red_urushi_wooden_cabinetry_slab": "朱漆木抽屜櫃檯階",
+  "block.urushi.red_urushi_wooden_cabinetry_slab": "朱漆木抽屜櫃半磚",
 
   "block.urushi.red_urushi_wooden_cabinetry": "朱漆木抽屜櫃",
 
@@ -689,7 +689,7 @@
 
   "block.urushi.hiwadabuki_block": "扁柏樹皮塊",
 
-  "block.urushi.hiwadabuki_slab": "扁柏樹皮臺階",
+  "block.urushi.hiwadabuki_slab": "扁柏樹皮半磚",
 
   "block.urushi.hiwadabuki_stairs": "扁柏樹皮樓梯",
 
@@ -881,7 +881,7 @@
 
   "block.urushi.senbakoki": "千齒脫粒機",
 
-  "info.urushi.rawrice": "对千齒脫粒機使用稻穗可以獲得2個糙米",
+  "info.urushi.rawrice": "對千齒脫粒機使用稻穗可以獲得2個糙米",
 
   "info.urushi.rawurushi": "對割開的漆木原木使用碗以獲得",
 
@@ -1547,37 +1547,37 @@
 
     "info.urushi.tier3": "等階3",
 
-    "block.urushi.white_stained_wooden_cabinetry_slab": "白色抽屜櫃檯階",
+    "block.urushi.white_stained_wooden_cabinetry_slab": "白色抽屜櫃半磚",
 
-    "block.urushi.orange_stained_wooden_cabinetry_slab": "橙色抽屜櫃檯階",
+    "block.urushi.orange_stained_wooden_cabinetry_slab": "橙色抽屜櫃半磚",
 
-    "block.urushi.magenta_stained_wooden_cabinetry_slab": "洋紅色抽屜櫃檯階",
+    "block.urushi.magenta_stained_wooden_cabinetry_slab": "洋紅色抽屜櫃半磚",
 
-    "block.urushi.light_blue_stained_wooden_cabinetry_slab": "淡藍色抽屜櫃檯階",
+    "block.urushi.light_blue_stained_wooden_cabinetry_slab": "淡藍色抽屜櫃半磚",
 
-    "block.urushi.yellow_stained_wooden_cabinetry_slab": "黃色抽屜櫃檯階",
+    "block.urushi.yellow_stained_wooden_cabinetry_slab": "黃色抽屜櫃半磚",
 
-    "block.urushi.lime_stained_wooden_cabinetry_slab": "黃綠色抽屜櫃檯階",
+    "block.urushi.lime_stained_wooden_cabinetry_slab": "黃綠色抽屜櫃半磚",
 
-    "block.urushi.pink_stained_wooden_cabinetry_slab": "粉紅色抽屜櫃檯階",
+    "block.urushi.pink_stained_wooden_cabinetry_slab": "粉紅色抽屜櫃半磚",
 
-    "block.urushi.gray_stained_wooden_cabinetry_slab": "灰色抽屜櫃檯階",
+    "block.urushi.gray_stained_wooden_cabinetry_slab": "灰色抽屜櫃半磚",
 
-    "block.urushi.light_gray_stained_wooden_cabinetry_slab": "淡灰色抽屜櫃檯階",
+    "block.urushi.light_gray_stained_wooden_cabinetry_slab": "淡灰色抽屜櫃半磚",
 
-    "block.urushi.cyan_stained_wooden_cabinetry_slab": "青色抽屜櫃檯階",
+    "block.urushi.cyan_stained_wooden_cabinetry_slab": "青色抽屜櫃半磚",
 
-    "block.urushi.purple_stained_wooden_cabinetry_slab": "紫色抽屜櫃檯階",
+    "block.urushi.purple_stained_wooden_cabinetry_slab": "紫色抽屜櫃半磚",
 
-    "block.urushi.blue_stained_wooden_cabinetry_slab": "藍色抽屜櫃檯階",
+    "block.urushi.blue_stained_wooden_cabinetry_slab": "藍色抽屜櫃半磚",
 
-    "block.urushi.brown_stained_wooden_cabinetry_slab": "棕色抽屜櫃檯階",
+    "block.urushi.brown_stained_wooden_cabinetry_slab": "棕色抽屜櫃半磚",
 
-    "block.urushi.green_stained_wooden_cabinetry_slab": "綠色抽屜櫃檯階",
+    "block.urushi.green_stained_wooden_cabinetry_slab": "綠色抽屜櫃半磚",
 
-    "block.urushi.red_stained_wooden_cabinetry_slab": "紅色抽屜櫃檯階",
+    "block.urushi.red_stained_wooden_cabinetry_slab": "紅色抽屜櫃半磚",
 
-    "block.urushi.black_stained_wooden_cabinetry_slab": "黑色抽屜櫃檯階",
+    "block.urushi.black_stained_wooden_cabinetry_slab": "黑色抽屜櫃半磚",
 
     "block.urushi.white_stained_wooden_cabinetry": "白色抽屜櫃",
 
@@ -1681,7 +1681,7 @@
 
     "advancements.urushi.wooden_cabinetry_slab.title": "亞種箱子",
 
-    "advancements.urushi.wooden_cabinetry_slab.description": "獲得抽屜櫃檯階",
+    "advancements.urushi.wooden_cabinetry_slab.description": "獲得抽屜櫃半磚",
 
     "advancements.urushi.wooden_cabinetry.title": "加倍箱子",
 
@@ -2390,8 +2390,8 @@
   "item.urushi.water_bamboo_cup": "水竹筒",
   "item.urushi.milk_bamboo_cup": "奶竹筒",
   "item.urushi.soy_source_bamboo_cup": "醬油竹筒",
-  "item.urushi.gravel_sushi": "沙礫壽司？！",
-  "entity.urushi.gravel_sushi_food": "沙礫壽司？！",
+  "item.urushi.gravel_sushi": "礫石壽司？！",
+  "entity.urushi.gravel_sushi_food": "礫石壽司？！",
   "item.urushi.minced_tuna_bowl": "金槍魚泥蓋飯",
   "item.urushi.kansui_powder": "食用鹼",
   "block.urushi.alkaline_dough": "鹼水面條麵糰",
@@ -2593,22 +2593,22 @@
    "item.urushi.red_silk": "紅色絹布",
    "item.urushi.black_silk": "黑色絹布",
    "block.urushi.silk_block": "絹布方塊",
-   "block.urushi.white_silk_block": "白色絹布块",
-   "block.urushi.orange_silk_block": "橙色絹布块",
-   "block.urushi.magenta_silk_block": "洋紅色絹布块",
-   "block.urushi.light_blue_silk_block": "淺藍色絹布块",
-   "block.urushi.yellow_silk_block": "黄色絹布块",
-   "block.urushi.lime_silk_block": "淺綠色絹布块",
-   "block.urushi.pink_silk_block": "粉紅色絹布块",
-   "block.urushi.gray_silk_block": "灰色絹布块",
-   "block.urushi.light_gray_silk_block": "淡灰色絹布块",
-   "block.urushi.cyan_silk_block": "青色絹布块",
-   "block.urushi.purple_silk_block": "紫色絹布块",
-   "block.urushi.blue_silk_block": "藍色絹布块",
-   "block.urushi.brown_silk_block": "棕色絹布块",
-   "block.urushi.green_silk_block": "綠色絹布块",
-   "block.urushi.red_silk_block": "紅色絹布块",
-   "block.urushi.black_silk_block": "黑色絹布块",
+   "block.urushi.white_silk_block": "白色絹布方塊",
+   "block.urushi.orange_silk_block": "橙色絹布方塊",
+   "block.urushi.magenta_silk_block": "洋紅色絹布方塊",
+   "block.urushi.light_blue_silk_block": "淺藍色絹布方塊",
+   "block.urushi.yellow_silk_block": "黄色絹布方塊",
+   "block.urushi.lime_silk_block": "淺綠色絹布方塊",
+   "block.urushi.pink_silk_block": "粉紅色絹布方塊",
+   "block.urushi.gray_silk_block": "灰色絹布方塊",
+   "block.urushi.light_gray_silk_block": "淡灰色絹布方塊",
+   "block.urushi.cyan_silk_block": "青色絹布方塊",
+   "block.urushi.purple_silk_block": "紫色絹布方塊",
+   "block.urushi.blue_silk_block": "藍色絹布方塊",
+   "block.urushi.brown_silk_block": "棕色絹布方塊",
+   "block.urushi.green_silk_block": "綠色絹布方塊",
+   "block.urushi.red_silk_block": "紅色絹布方塊",
+   "block.urushi.black_silk_block": "黑色絹布方塊",
    "item.urushi.kakuriyo_villager_spawn_egg": "幽世住民 生怪蛋",
    "info.urushi.hibachi": "在上方放置茶壺以製作綠茶",
    "sounds.urushi.urushi_advancements": "漆MOD：達成進度",
@@ -2616,8 +2616,8 @@
    "item.urushi.mandarin": "橘子",
    "entity.urushi.mandarin_food": "橘子",
    "item.urushi.mandarin_slice": "橘子瓣",
-   "block.urushi.mandarin_sapling": "橘樹樹苗",
-   "block.urushi.mandarin_leaves": "橘樹樹葉",
+   "block.urushi.mandarin_sapling": "橘子樹樹苗",
+   "block.urushi.mandarin_leaves": "橘子樹樹葉",
    "block.urushi.kotatsu": "被爐",
 
   "#comment-furigana-start": "↓No need to translate furiganas / 不需翻譯假名注音",
@@ -2684,39 +2684,39 @@
   "info.urushi.furigana.ayu": "鮎(あゆ)",
   "#comment-furigana-end": "↑No need to translate furiganas / 不需翻譯假名注音",
 
-  "block.urushi.concrete_block_wall": "混凝土墻",
+  "block.urushi.concrete_block_wall": "混凝土牆",
   "block.urushi.limonite_ore": "褐鐵礦",
   "block.urushi.chalcopyrite_ore": "黃銅礦",
-  "block.urushi.smooth_mangrove_planks": "平滑红樹木材",
-  "block.urushi.smooth_mangrove_slab": "平滑红樹木半磚",
-  "block.urushi.smooth_mangrove_stairs": "平滑红樹木階梯",
-  "block.urushi.mangrove_parapet": "红樹木欄杆",
-  "block.urushi.mangrove_framed_plaster": "红樹木框灰泥",
-  "block.urushi.mangrove_bars": "红樹木屏風柱",
-  "block.urushi.mangrove_fushiranma": "红樹木叉型門上窗",
-  "block.urushi.mangrove_framed_wattle_and_daub": "红樹木框土坯",
-  "block.urushi.mangrove_framed_sand_coast": "红樹木框砂墻",
-  "block.urushi.mangrove_shitamiita": "红樹木楔紋板",
-  "block.urushi.mangrove_shitamiita_slab": "红樹木楔紋板半磚",
-  "block.urushi.mangrove_board_window": "红樹木直欞推拉窗",
-  "block.urushi.mangrove_framed_orange_plaster": "红樹木框橙色灰泥",
-  "block.urushi.mangrove_framed_magenta_plaster": "红樹木框洋紅色灰泥",
-  "block.urushi.mangrove_framed_light_blue_plaster": "红樹木框淺藍色灰泥",
-  "block.urushi.mangrove_framed_yellow_plaster": "红樹木框黄色灰泥",
-  "block.urushi.mangrove_framed_lime_plaster": "红樹木框淺綠色灰泥",
-  "block.urushi.mangrove_framed_pink_plaster": "红樹木框粉紅色灰泥",
-  "block.urushi.mangrove_framed_gray_plaster": "红樹木框灰色灰泥",
-  "block.urushi.mangrove_framed_light_gray_plaster": "红樹木框淡灰色灰泥",
-  "block.urushi.mangrove_framed_cyan_plaster": "红樹木框青色灰泥",
-  "block.urushi.mangrove_framed_purple_plaster": "红樹木框紫色灰泥",
-  "block.urushi.mangrove_framed_blue_plaster": "红樹木框藍色灰泥",
-  "block.urushi.mangrove_framed_brown_plaster": "红樹木框棕色灰泥",
-  "block.urushi.mangrove_framed_green_plaster": "红樹木框綠色灰泥",
-  "block.urushi.mangrove_framed_red_plaster": "红樹木框紅色灰泥",
-  "block.urushi.mangrove_framed_black_plaster": "红樹木框紅色灰泥",
-  "block.urushi.mangrove_wall_for_framed_blocks": "红樹木墻板",
+  "block.urushi.smooth_mangrove_planks": "平滑紅樹林木材",
+  "block.urushi.smooth_mangrove_slab": "平滑紅樹林木半磚",
+  "block.urushi.smooth_mangrove_stairs": "平滑紅樹林木階梯",
+  "block.urushi.mangrove_parapet": "紅樹林木欄杆",
+  "block.urushi.mangrove_framed_plaster": "紅樹林木框灰泥",
+  "block.urushi.mangrove_bars": "紅樹林木屏風柱",
+  "block.urushi.mangrove_fushiranma": "紅樹林木叉型門上窗",
+  "block.urushi.mangrove_framed_wattle_and_daub": "紅樹林木框土坯",
+  "block.urushi.mangrove_framed_sand_coast": "紅樹林木框砂牆",
+  "block.urushi.mangrove_shitamiita": "紅樹林木楔紋板",
+  "block.urushi.mangrove_shitamiita_slab": "紅樹林木楔紋板半磚",
+  "block.urushi.mangrove_board_window": "紅樹林木直欞推拉窗",
+  "block.urushi.mangrove_framed_orange_plaster": "紅樹林木框橙色灰泥",
+  "block.urushi.mangrove_framed_magenta_plaster": "紅樹林木框洋紅色灰泥",
+  "block.urushi.mangrove_framed_light_blue_plaster": "紅樹林木框淺藍色灰泥",
+  "block.urushi.mangrove_framed_yellow_plaster": "紅樹林木框黄色灰泥",
+  "block.urushi.mangrove_framed_lime_plaster": "紅樹林木框淺綠色灰泥",
+  "block.urushi.mangrove_framed_pink_plaster": "紅樹林木框粉紅色灰泥",
+  "block.urushi.mangrove_framed_gray_plaster": "紅樹林木框灰色灰泥",
+  "block.urushi.mangrove_framed_light_gray_plaster": "紅樹林木框淡灰色灰泥",
+  "block.urushi.mangrove_framed_cyan_plaster": "紅樹林木框青色灰泥",
+  "block.urushi.mangrove_framed_purple_plaster": "紅樹林木框紫色灰泥",
+  "block.urushi.mangrove_framed_blue_plaster": "紅樹林木框藍色灰泥",
+  "block.urushi.mangrove_framed_brown_plaster": "紅樹林木框棕色灰泥",
+  "block.urushi.mangrove_framed_green_plaster": "紅樹林木框綠色灰泥",
+  "block.urushi.mangrove_framed_red_plaster": "紅樹林木框紅色灰泥",
+  "block.urushi.mangrove_framed_black_plaster": "紅樹林木框紅色灰泥",
+  "block.urushi.mangrove_wall_for_framed_blocks": "紅樹林木牆板",
   "block.urushi.vertical_smooth_mangrove_slab": "平滑红樹木豎直半磚",
-  "block.urushi.horizontal_mangrove_bars": "红樹木橫向屏風柱",
+  "block.urushi.horizontal_mangrove_bars": "紅樹林木橫向屏風柱",
   "block.urushi.smooth_cherry_planks": "平滑櫻花木材",
   "block.urushi.smooth_cherry_slab": "平滑櫻花木半磚",
   "block.urushi.smooth_cherry_stairs": "平滑櫻花木階梯",
@@ -2725,7 +2725,7 @@
   "block.urushi.cherry_bars": "櫻花木屏風柱",
   "block.urushi.cherry_fushiranma": "櫻花木叉型門上窗",
   "block.urushi.cherry_framed_wattle_and_daub": "櫻花木框土坯",
-  "block.urushi.cherry_framed_sand_coast": "櫻花木框砂墻",
+  "block.urushi.cherry_framed_sand_coast": "櫻花木框砂牆",
   "block.urushi.cherry_shitamiita": "櫻花木楔紋板",
   "block.urushi.cherry_shitamiita_slab": "櫻花木楔紋板半磚",
   "block.urushi.cherry_board_window": "櫻花木直欞推拉窗",
@@ -2744,7 +2744,7 @@
   "block.urushi.cherry_framed_green_plaster": "櫻花木框綠色灰泥",
   "block.urushi.cherry_framed_red_plaster": "櫻花木框紅色灰泥",
   "block.urushi.cherry_framed_black_plaster": "櫻花木框紅色灰泥",
-  "block.urushi.cherry_wall_for_framed_blocks": "櫻花木墻板",
+  "block.urushi.cherry_wall_for_framed_blocks": "櫻花木牆板",
   "block.urushi.vertical_smooth_cherry_slab": "平滑櫻花木豎直半磚",
   "block.urushi.horizontal_cherry_bars": "櫻花木橫向屏風柱",
   "block.urushi.smooth_pale_oak_planks": "平滑蒼白橡木木材",
@@ -2755,7 +2755,7 @@
   "block.urushi.pale_oak_bars": "蒼白橡木屏風柱",
   "block.urushi.pale_oak_fushiranma": "蒼白橡木叉型門上窗",
   "block.urushi.pale_oak_framed_wattle_and_daub": "蒼白橡木框土坯",
-  "block.urushi.pale_oak_framed_sand_coast": "蒼白橡木框砂墻",
+  "block.urushi.pale_oak_framed_sand_coast": "蒼白橡木框砂牆",
   "block.urushi.pale_oak_shitamiita": "蒼白橡木楔紋板",
   "block.urushi.pale_oak_shitamiita_slab": "蒼白橡木楔紋板半磚",
   "block.urushi.pale_oak_board_window": "蒼白橡木直欞推拉窗",
@@ -2774,61 +2774,61 @@
   "block.urushi.pale_oak_framed_green_plaster": "蒼白橡木框綠色灰泥",
   "block.urushi.pale_oak_framed_red_plaster": "蒼白橡木框紅色灰泥",
   "block.urushi.pale_oak_framed_black_plaster": "蒼白橡木框紅色灰泥",
-  "block.urushi.pale_oak_wall_for_framed_blocks": "蒼白橡木墻板",
+  "block.urushi.pale_oak_wall_for_framed_blocks": "蒼白橡木牆板",
   "block.urushi.vertical_smooth_pale_oak_slab": "平滑蒼白橡木豎直半磚",
   "block.urushi.horizontal_pale_oak_bars": "蒼白橡木橫向屏風柱",
-  "block.urushi.smooth_crimson_planks": "平滑緋紅木材",
-  "block.urushi.smooth_crimson_slab": "平滑緋紅木半磚",
-  "block.urushi.smooth_crimson_stairs": "平滑緋紅木階梯",
-  "block.urushi.crimson_framed_plaster": "緋紅木框灰泥",
-  "block.urushi.crimson_framed_wattle_and_daub": "緋紅木框土坯",
-  "block.urushi.crimson_framed_sand_coast": "緋紅木框砂墻",
-  "block.urushi.crimson_framed_orange_plaster": "緋紅木框橙色灰泥",
-  "block.urushi.crimson_framed_magenta_plaster": "緋紅木框洋紅色灰泥",
-  "block.urushi.crimson_framed_light_blue_plaster": "緋紅木框淺藍色灰泥",
-  "block.urushi.crimson_framed_yellow_plaster": "緋紅木框黄色灰泥",
-  "block.urushi.crimson_framed_lime_plaster": "緋紅木框淺綠色灰泥",
-  "block.urushi.crimson_framed_pink_plaster": "緋紅木框粉紅色灰泥",
-  "block.urushi.crimson_framed_gray_plaster": "緋紅木框灰色灰泥",
-  "block.urushi.crimson_framed_light_gray_plaster": "緋紅木框淡灰色灰泥",
-  "block.urushi.crimson_framed_cyan_plaster": "緋紅木框青色灰泥",
-  "block.urushi.crimson_framed_purple_plaster": "緋紅木框紫色灰泥",
-  "block.urushi.crimson_framed_blue_plaster": "緋紅木框藍色灰泥",
-  "block.urushi.crimson_framed_brown_plaster": "緋紅木框棕色灰泥",
-  "block.urushi.crimson_framed_green_plaster": "緋紅木框綠色灰泥",
-  "block.urushi.crimson_framed_red_plaster": "緋紅木框紅色灰泥",
-  "block.urushi.crimson_framed_black_plaster": "緋紅木框紅色灰泥",
-  "block.urushi.crimson_wall_for_framed_blocks": "緋紅木墻板",
-  "block.urushi.vertical_smooth_crimson_slab": "平滑緋紅木豎直半磚",
-  "block.urushi.smooth_warped_planks": "平滑扭曲木材",
-  "block.urushi.smooth_warped_slab": "平滑扭曲木半磚",
-  "block.urushi.smooth_warped_stairs": "平滑扭曲木階梯",
-  "block.urushi.warped_framed_plaster": "扭曲木框灰泥",
-  "block.urushi.warped_framed_wattle_and_daub": "扭曲木框土坯",
-  "block.urushi.warped_framed_sand_coast": "扭曲木框砂墻",
-  "block.urushi.warped_framed_orange_plaster": "扭曲木框橙色灰泥",
-  "block.urushi.warped_framed_magenta_plaster": "扭曲木框洋紅色灰泥",
-  "block.urushi.warped_framed_light_blue_plaster": "扭曲木框淺藍色灰泥",
-  "block.urushi.warped_framed_yellow_plaster": "扭曲木框黄色灰泥",
-  "block.urushi.warped_framed_lime_plaster": "扭曲木框淺綠色灰泥",
-  "block.urushi.warped_framed_pink_plaster": "扭曲木框粉紅色灰泥",
-  "block.urushi.warped_framed_gray_plaster": "扭曲木框灰色灰泥",
-  "block.urushi.warped_framed_light_gray_plaster": "扭曲木框淡灰色灰泥",
-  "block.urushi.warped_framed_cyan_plaster": "扭曲木框青色灰泥",
-  "block.urushi.warped_framed_purple_plaster": "扭曲木框紫色灰泥",
-  "block.urushi.warped_framed_blue_plaster": "扭曲木框藍色灰泥",
-  "block.urushi.warped_framed_brown_plaster": "扭曲木框棕色灰泥",
-  "block.urushi.warped_framed_green_plaster": "扭曲木框綠色灰泥",
-  "block.urushi.warped_framed_red_plaster": "扭曲木框紅色灰泥",
-  "block.urushi.warped_framed_black_plaster": "扭曲木框紅色灰泥",
-  "block.urushi.warped_wall_for_framed_blocks": "扭曲木壁",
-  "block.urushi.vertical_smooth_warped_slab": "平滑扭曲木豎直半磚",
+  "block.urushi.smooth_crimson_planks": "平滑緋紅蕈木材",
+  "block.urushi.smooth_crimson_slab": "平滑緋紅蕈木半磚",
+  "block.urushi.smooth_crimson_stairs": "平滑緋紅蕈木階梯",
+  "block.urushi.crimson_framed_plaster": "緋紅蕈木框灰泥",
+  "block.urushi.crimson_framed_wattle_and_daub": "緋紅蕈木框土坯",
+  "block.urushi.crimson_framed_sand_coast": "緋紅蕈木框砂牆",
+  "block.urushi.crimson_framed_orange_plaster": "緋紅蕈木框橙色灰泥",
+  "block.urushi.crimson_framed_magenta_plaster": "緋紅蕈木框洋紅色灰泥",
+  "block.urushi.crimson_framed_light_blue_plaster": "緋紅蕈木框淺藍色灰泥",
+  "block.urushi.crimson_framed_yellow_plaster": "緋紅蕈木框黄色灰泥",
+  "block.urushi.crimson_framed_lime_plaster": "緋紅蕈木框淺綠色灰泥",
+  "block.urushi.crimson_framed_pink_plaster": "緋紅蕈木框粉紅色灰泥",
+  "block.urushi.crimson_framed_gray_plaster": "緋紅蕈木框灰色灰泥",
+  "block.urushi.crimson_framed_light_gray_plaster": "緋紅蕈木框淡灰色灰泥",
+  "block.urushi.crimson_framed_cyan_plaster": "緋紅蕈木框青色灰泥",
+  "block.urushi.crimson_framed_purple_plaster": "緋紅蕈木框紫色灰泥",
+  "block.urushi.crimson_framed_blue_plaster": "緋紅蕈木框藍色灰泥",
+  "block.urushi.crimson_framed_brown_plaster": "緋紅蕈木框棕色灰泥",
+  "block.urushi.crimson_framed_green_plaster": "緋紅蕈木框綠色灰泥",
+  "block.urushi.crimson_framed_red_plaster": "緋紅蕈木框紅色灰泥",
+  "block.urushi.crimson_framed_black_plaster": "緋紅蕈木框紅色灰泥",
+  "block.urushi.crimson_wall_for_framed_blocks": "緋紅蕈木牆板",
+  "block.urushi.vertical_smooth_crimson_slab": "平滑緋紅蕈木豎直半磚",
+  "block.urushi.smooth_warped_planks": "平滑扭曲蕈木材",
+  "block.urushi.smooth_warped_slab": "平滑扭曲蕈木半磚",
+  "block.urushi.smooth_warped_stairs": "平滑扭曲蕈木階梯",
+  "block.urushi.warped_framed_plaster": "扭曲蕈木框灰泥",
+  "block.urushi.warped_framed_wattle_and_daub": "扭曲蕈木框土坯",
+  "block.urushi.warped_framed_sand_coast": "扭曲蕈木框砂牆",
+  "block.urushi.warped_framed_orange_plaster": "扭曲蕈木框橙色灰泥",
+  "block.urushi.warped_framed_magenta_plaster": "扭曲蕈木框洋紅色灰泥",
+  "block.urushi.warped_framed_light_blue_plaster": "扭曲蕈木框淺藍色灰泥",
+  "block.urushi.warped_framed_yellow_plaster": "扭曲蕈木框黄色灰泥",
+  "block.urushi.warped_framed_lime_plaster": "扭曲蕈木框淺綠色灰泥",
+  "block.urushi.warped_framed_pink_plaster": "扭曲蕈木框粉紅色灰泥",
+  "block.urushi.warped_framed_gray_plaster": "扭曲蕈木框灰色灰泥",
+  "block.urushi.warped_framed_light_gray_plaster": "扭曲蕈木框淡灰色灰泥",
+  "block.urushi.warped_framed_cyan_plaster": "扭曲蕈木框青色灰泥",
+  "block.urushi.warped_framed_purple_plaster": "扭曲蕈木框紫色灰泥",
+  "block.urushi.warped_framed_blue_plaster": "扭曲蕈木框藍色灰泥",
+  "block.urushi.warped_framed_brown_plaster": "扭曲蕈木框棕色灰泥",
+  "block.urushi.warped_framed_green_plaster": "扭曲蕈木框綠色灰泥",
+  "block.urushi.warped_framed_red_plaster": "扭曲蕈木框紅色灰泥",
+  "block.urushi.warped_framed_black_plaster": "扭曲蕈木框紅色灰泥",
+  "block.urushi.warped_wall_for_framed_blocks": "扭曲蕈木壁",
+  "block.urushi.vertical_smooth_warped_slab": "平滑扭曲蕈木豎直半磚",
   "info.urushi.same_as_composter": "和堆肥箱類似，右擊或使用漏斗以放入物品。",
   "info.urushi.fermentation_barrel_1": "放入8個米飯會轉換爲8個米麴，8個味噌麴會轉換為8個味噌。",
-  "info.urushi.fermentation_barrel_2": "放入1个米飯、1个米麴、1个水竹筒并放置後，使用玻璃瓶可以獲得清酒。",
+  "info.urushi.fermentation_barrel_2": "放入1個米飯、1個米麴、1個水竹筒並放置後，使用玻璃瓶可以獲得清酒。",
   "info.urushi.ochoko_1": "飲用後會獲得抗性和緩速效果。",
   "info.urushi.ochoko_2": "多次連續飲用會提升效果的等級與持續時間，但是……",
-  "info.urushi.sake": "在發酵桶内放入1个米飯、1个米麴、1个水竹筒并放置後，对發酵桶使用玻璃瓶即可獲得。",
+  "info.urushi.sake": "在發酵桶内放入1個米飯、1個米麴、1個水竹筒並放置後，對發酵桶使用玻璃瓶即可獲得。",
   "info.urushi.noodle": "主手持切麵刀、副手持麵條麵糰、按住使用鍵可以快速切麵。",
   "item.urushi.sake": "清酒",
   "item.urushi.tokkuri": "清酒壺",
@@ -2836,8 +2836,8 @@
   "entity.urushi.sake_food": "清酒",
   "entity.urushi.tokkuri_food": "清酒壺",
   "entity.urushi.ochoko_food": "清酒杯",
-  "container.urushi.kakuriyo_villager_jobless": "无业 - 幽世住民",
-  "container.urushi.kakuriyo_villager_cook": "厨師 - 幽世住民",
+  "container.urushi.kakuriyo_villager_jobless": "無業 - 幽世住民",
+  "container.urushi.kakuriyo_villager_cook": "廚師 - 幽世住民",
   "container.urushi.kakuriyo_villager_miner": "礦工 - 幽世住民",
   "container.urushi.kakuriyo_villager_fisherman": "漁夫 - 幽世住民",
   "container.urushi.kakuriyo_villager_lumberjack": "伐木工 - 幽世住民",
@@ -2856,7 +2856,7 @@
   "book.urushi.chronicles1": "“幽世神記”（暫譯）尚在製作中，還請不要翻譯這部分的内容。",
   "info.urushi.crop2": "對草方塊使用鋤進行鋤地以獲取",
   "info.urushi.tea_bush": "在幽世街道中與厨師職業的幽世住民交易以獲取",
-  "info.urushi.tea_leaf": "培育茶叶樹丛以獲取",
+  "info.urushi.tea_leaf": "培育茶葉樹叢以獲取",
   "gui.jei.category.urushi.kettle": "泡茶",
   "gui.jei.category.urushi.rainwater_tank": "浸水",
   "gui.jei.category.urushi.rainwater_tank.text": "右擊",
