--- a/src/main/resources/assets/urushi/lang/zh_cn.json
+++ b/src/main/resources/assets/urushi/lang/zh_cn.json
@@ -1211,7 +1211,7 @@
     "gui.jei.category.urushi.metal_element_tier2_crafting": "仪式",
     "gui.jei.category.urushi.water_element_tier2_crafting": "仪式",
     "info.urushi.hokora": "右击或使用漏斗以放入指定物品，每个物品可产生5点对应灵力",
-    "info.urushi.wood_hokora": "需要：熟梅子",
+    "info.urushi.wood_hokora": "需要：甜浆果",
     "info.urushi.fire_hokora": "需要：小麦",
     "info.urushi.earth_hokora": "需要：稻穗",
     "info.urushi.metal_hokora": "需要：葱",
