lang file backup

--- a/src/main/resources/assets/urushi/lang/zh_cn.json
+++ b/src/main/resources/assets/urushi/lang/zh_cn.json
@@ -1630,9 +1630,9 @@
   "info.urushi.furigana.so": "蘇(そ)",
   "info.urushi.furigana.ayu": "鮎(あゆ)",
   "#comment-furigana-end": "↑No need to translate furiganas / 无需翻译假名注音",
-  "block.urushi.concrete_block_wall": "混凝土墙",
-  "block.urushi.limonite_ore": "褐铁矿",
-  "block.urushi.chalcopyrite_ore": "黄铜矿",
+  "block.urushi.concrete_block_wall": "松型空心混凝土墙",
+  "block.urushi.limonite_ore": "褐铁矿石",
+  "block.urushi.chalcopyrite_ore": "黄铜矿石",
   "block.urushi.smooth_mangrove_planks": "平滑红树木板",
   "block.urushi.smooth_mangrove_slab": "平滑红树木台阶",
   "block.urushi.smooth_mangrove_stairs": "平滑红树木楼梯",
@@ -1815,5 +1815,38 @@
   "advancements.urushi.silkworm.title": "抽丝剥茧",
   "advancements.urushi.silkworm.description": "获得一些蚕",
   "advancements.urushi.silk_thread.title": "殖产兴业",
-  "advancements.urushi.silk_thread.description": "获得绢丝"
+  "advancements.urushi.silk_thread.description": "获得绢丝",
+  // @debug，回头再翻
+  "container.urushi.filler": "呪術フィラー",
+  "info.urushi.filler_mode_1": "埋め立て",
+  "info.urushi.filler_mode_2": "床張り替え",
+  "info.urushi.filler_mode_3": "箱作成",
+  "info.urushi.filler_mode_4": "円柱作成",
+  "info.urushi.filler_mode_5": "縦延長",
+  "info.urushi.filler_mode_8": "撤去",
+  "info.urushi.filler_mode_9": "整地",
+  "info.urushi.filler_mode_10": "完全消去",
+  "info.urushi.filler_mode_11": "液体除去",
+  "info.urushi.filler_mode_1_description": "全てブロックで満たす",
+  "info.urushi.filler_mode_2_description": "範囲直下を置き換える",
+  "info.urushi.filler_mode_3_description": "中空な直方体を作る",
+  "info.urushi.filler_mode_4_description": "中空な円柱を作る",
+  "info.urushi.filler_mode_5_description": "一番下の層のブロック配置で上に伸ばす",
+  "info.urushi.filler_mode_8_description": "ブロックを壊す(アイテム化する)",
+  "info.urushi.filler_mode_9_description": "範囲より下を埋め立て、範囲内は撤去",
+  "info.urushi.filler_mode_10_description": "アイテム化させずブロックを消す",
+  "info.urushi.filler_mode_11_description": "液体のみ消す",
+  "advancements.urushi.rice.title": "お米食べろ！",
+  "advancements.urushi.rice.description": "ご飯を手に入れる",
+  "advancements.urushi.sushi.title": "3、2、1、へいらっしゃい！",
+  "advancements.urushi.sushi.description": "いずれかの寿司を手に入れる\n\n(bamboon作\n「SCP-1134-JP - 爆転ニギリ スシブレード」に基づきます\nhttp://scp-jp.wikidot.com/scp-1134-jp\nCC BY-SA 3.0)",
+  "block.urushi.smooth_stone_brick": "滑らかな石のレンガ",
+  "block.urushi.smooth_stone_tile": "滑らかな石のタイル",
+  "block.urushi.concrete_blocks": "コンクリートブロック",
+  "block.urushi.concrete_block_slab": "コンクリートブロックのハーフブロック",
+  "block.urushi.concrete_block_stairs": "コンクリートブロックの階段",
+  "block.urushi.concrete_block_normal_wall": "透かし無しのコンクリート塀",
+  "item.urushi.drawstring_bag": "束口布袋",
+  "info.urushi.drawstring_bag": "与大型箱子容积相等",
+  "info.urushi.dyeable": "可染色"
 }
