--- a/src/main/resources/assets/urushi/lang/zh_tw.json
+++ b/src/main/resources/assets/urushi/lang/zh_tw.json
@@ -1846,5 +1846,9 @@
   "block.urushi.concrete_block_normal_wall": "實心混凝土牆",
   "item.urushi.drawstring_bag": "束口布袋",
   "info.urushi.drawstring_bag": "和大型儲物箱的欄位相等",
-  "info.urushi.dyeable": "可以染色"
+  "info.urushi.dyeable": "可以染色",
+  "block.urushi.small_torii": "小鳥居",
+  "block.urushi.wooden_hokora": "神龕",
+  "info.urushi.ironsand_ore": "鐵礦沙在沙漠群系之外的沙地上生成",
+  "info.urushi.hot_ironsand": "投入水中會變成鉄原礦"
 }
