--- a/src/main/resources/assets/urushi/lang/en_us.json
+++ b/src/main/resources/assets/urushi/lang/en_us.json
@@ -29,8 +29,10 @@
   "block.urushi.smooth_dark_oak_slab": "Smooth Dark Oak Slab",
   "block.urushi.smooth_dark_oak_stairs": "Smooth Dark Oak Stairs",
   "block.urushi.namako": "Namako",
-  "block.urushi.green_tatami": "Green Tatami",
-  "block.urushi.brown_tatami": "Brown Tatami",
+  "block.urushi.green_tatami": "Green Tatami (Old)",
+  "block.urushi.brown_tatami": "Brown Tatami (Old)",
+  "block.urushi.green_tatami_mat": "Green Tatami",
+  "block.urushi.brown_tatami_mat": "Brown Tatami",
   "item.urushi.raw_ibushi_kawara": "Unfired Ibushi Kawara",
   "item.urushi.ibushi_kawara": "Ibushi Kawara",
   "item.urushi.copper_kawara": "Copper Kawara",
@@ -213,8 +215,10 @@
   "item.urushi.kitsunebi": "Kitsunebi",
   "item.urushi.tofu": "Tofu",
   "item.urushi.abura_age": "Abura-age",
-  "block.urushi.green_tatami_carpet": "Green Tatami Carpet",
-  "block.urushi.brown_tatami_carpet": "Brown Tatami Carpet",
+  "block.urushi.green_tatami_carpet": "Green Tatami Carpet (Old)",
+  "block.urushi.brown_tatami_carpet": "Brown Tatami Carpet (Old)",
+  "block.urushi.green_tatami_mat_carpet": "Green Tatami Carpet",
+  "block.urushi.brown_tatami_mat_carpet": "Brown Tatami Carpet",
   "block.urushi.fox_hopper": "Advanced Hopper",
   "block.urushi.sand_coast": "Sand Coast",
   "block.urushi.thatched_block": "Thatched Block",
@@ -1469,8 +1473,10 @@
   "info.urushi.spike_jufu1": "Generate metal spikes and hurts mobs.",
   "info.urushi.spike_jufu2": "The damage by the spikes is treated as an attack by the player, so the mob drops experiences and rare drops.",
   "info.urushi.freezing_jufu1": "Holds mobs for 10 seconds.",
-  "block.urushi.green_tatami_slab": "Green Tatami Slab",
-  "block.urushi.brown_tatami_slab": "Brown Tatami Slab",
+  "block.urushi.green_tatami_slab": "Green Tatami Slab (Old)",
+  "block.urushi.brown_tatami_slab": "Brown Tatami Slab (Old)",
+  "block.urushi.green_tatami_mat_slab": "Green Tatami Slab",
+  "block.urushi.brown_tatami_mat_slab": "Brown Tatami Slab",
   "block.urushi.sand_coast_slab": "Sand Coast Slab",
   "block.urushi.sand_coast_stairs": "Sand Coast Stairs",
   "block.urushi.kakuriyo_portal": "Kakuriyo Portal",
