--- a/src/main/resources/assets/urushi/lang/ja_jp.json
+++ b/src/main/resources/assets/urushi/lang/ja_jp.json
@@ -29,8 +29,10 @@
    "block.urushi.smooth_dark_oak_slab": "滑らかなダークオークのハーフブロック",
    "block.urushi.smooth_dark_oak_stairs": "滑らかなダークオークの階段",
    "block.urushi.namako": "生子壁",
-   "block.urushi.green_tatami": "緑色の畳",
-   "block.urushi.brown_tatami": "茶色の畳",
+   "block.urushi.green_tatami": "緑色の畳 (旧)",
+   "block.urushi.brown_tatami": "茶色の畳 (旧)",
+   "block.urushi.green_tatami_mat": "緑色の畳",
+   "block.urushi.brown_tatami_mat": "茶色の畳",
    "item.urushi.raw_ibushi_kawara": "生のいぶし瓦",
    "item.urushi.ibushi_kawara": "いぶし瓦",
       "item.urushi.copper_kawara": "銅瓦",
@@ -213,8 +215,10 @@
    "item.urushi.kitsunebi": "狐火",
    "item.urushi.tofu": "豆腐",
    "item.urushi.abura_age": "油揚げ",
-   "block.urushi.green_tatami_carpet": "緑色の茣蓙",
-   "block.urushi.brown_tatami_carpet": "茶色の茣蓙",
+   "block.urushi.green_tatami_carpet": "緑色の茣蓙 (旧)",
+   "block.urushi.brown_tatami_carpet": "茶色の茣蓙 (旧)",
+   "block.urushi.green_tatami_mat_carpet": "緑色の茣蓙",
+   "block.urushi.brown_tatami_mat_carpet": "茶色の茣蓙",
    "block.urushi.fox_hopper": "改良型ホッパー",
    "block.urushi.sand_coast": "砂壁",
    "block.urushi.thatched_block": "茅ブロック",
@@ -1469,8 +1473,10 @@
    "info.urushi.spike_jufu1": "地面から金属のトゲを生やしてダメージを与える。",
    "info.urushi.spike_jufu2": "トゲによるダメージはプレイヤーによる攻撃扱いとなりレアドロップや経験値が手に入る。",
    "info.urushi.freezing_jufu1": "モブを10秒間拘束する。",
-   "block.urushi.green_tatami_slab": "緑色の畳のハーフブロック",
-   "block.urushi.brown_tatami_slab": "茶色の畳のハーフブロック",
+   "block.urushi.green_tatami_slab": "緑色の畳のハーフブロック (旧)",
+   "block.urushi.brown_tatami_slab": "茶色の畳のハーフブロック (旧)",
+   "block.urushi.green_tatami_mat_slab": "緑色の畳のハーフブロック",
+   "block.urushi.brown_tatami_mat_slab": "茶色の畳のハーフブロック",
    "block.urushi.sand_coast_slab": "砂壁のハーフブロック",
    "block.urushi.sand_coast_stairs": "砂壁の階段",
    "block.urushi.kakuriyo_portal": "幽世<かくりよ>への門",
