--- a/src/main/resources/assets/urushi/lang/zh_cn.json
+++ b/src/main/resources/assets/urushi/lang/zh_cn.json
@@ -29,8 +29,10 @@
   "block.urushi.smooth_dark_oak_slab": "平滑深色橡木台阶",
   "block.urushi.smooth_dark_oak_stairs": "平滑深色橡木楼梯",
   "block.urushi.namako": "海鼠壁",
-  "block.urushi.green_tatami": "绿色榻榻米",
-  "block.urushi.brown_tatami": "棕色榻榻米",
+  "block.urushi.green_tatami": "绿色榻榻米 (旧)",
+  "block.urushi.brown_tatami": "棕色榻榻米 (旧)",
+  "block.urushi.green_tatami_mat": "绿色榻榻米",
+  "block.urushi.brown_tatami_mat": "棕色榻榻米",
   "item.urushi.raw_ibushi_kawara": "青瓦坯",
   "item.urushi.ibushi_kawara": "青瓦",
   "item.urushi.copper_kawara": "铜瓦",
@@ -213,8 +215,10 @@
   "item.urushi.kitsunebi": "狐火",
   "item.urushi.tofu": "豆腐",
   "item.urushi.abura_age": "油豆腐",
-  "block.urushi.green_tatami_carpet": "绿色榻榻米地毯",
-  "block.urushi.brown_tatami_carpet": "棕色榻榻米地毯",
+  "block.urushi.green_tatami_carpet": "绿色榻榻米地毯 (旧)",
+  "block.urushi.brown_tatami_carpet": "棕色榻榻米地毯 (旧)",
+  "block.urushi.green_tatami_mat_carpet": "绿色榻榻米地毯",
+  "block.urushi.brown_tatami_mat_carpet": "棕色榻榻米地毯",
   "block.urushi.fox_hopper": "改良漏斗",
   "block.urushi.sand_coast": "砂墙",
   "block.urushi.thatched_block": "茅草块",
@@ -1470,8 +1474,10 @@
    "info.urushi.spike_jufu1": "从地下生成铁棘刺并对其上的生物造成伤害",
    "info.urushi.spike_jufu2": "铁棘刺造成的伤害视作玩家造成的伤害，且生物死亡时会掉落经验及稀有掉落物等",
    "info.urushi.freezing_jufu1": "令生物在10秒内无法移动",
-   "block.urushi.green_tatami_slab": "绿色榻榻米台阶",
-   "block.urushi.brown_tatami_slab": "棕色榻榻米台阶",
+   "block.urushi.green_tatami_slab": "绿色榻榻米台阶 (旧)",
+   "block.urushi.brown_tatami_slab": "棕色榻榻米台阶 (旧)",
+   "block.urushi.green_tatami_mat_slab": "绿色榻榻米台阶",
+   "block.urushi.brown_tatami_mat_slab": "棕色榻榻米台阶",
    "block.urushi.sand_coast_slab": "砂墙台阶",
    "block.urushi.sand_coast_stairs": "砂墙楼梯",
    "block.urushi.kakuriyo_portal": "幽世传送门",
